--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="/" class="mr-5 hover:text-gray-900">Home</a>
             <a href="/" class="mr-5 hover:text-gray-900">Services</a>
-            <a href="/" class="mr-5 hover:text-gray-900">About</a>
+            <a href="/" class="mr-5 hover:text-gray-900">About us</a>
             <a href="/" class="mr-5 hover:text-gray-900">Contact</a>
           </nav>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
